cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MissingGuardBlockTest/bug257048.h
#ifndef _H_FOO
#define _H_FOO 1

#endif // _H_FOO